<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e1e1"

    tools:context="com.mhsoftsolutions.com.MainActivity_old">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeaderLabel"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/lblInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblInformation"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtWeight"
            android:hint="@string/lblWeight"
            android:layout_weight="1" />
        <EditText
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeight"
            android:hint="@string/lblHeight"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    </LinearLayout>


    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_alignEnd="@+id/linearLayout5"
        android:background="#FFA8A7A7" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalculate"
            android:text="@string/btnCalculate"
            android:layout_below="@+id/linearLayout2"
            android:layout_toLeftOf="@+id/btnClear"
            android:layout_toStartOf="@+id/btnClear"
            android:layout_marginRight="43dp"
            android:layout_marginEnd="43dp"
            android:background="#a8a7a7" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"

            android:layout_below="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_marginRight="48dp"
            android:layout_marginEnd="48dp"
            android:background="#FFA8A7A7" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:id="@+id/linearLayout6"
        android:background="#e4e1e1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDisplayOut"
            android:textSize="16sp"
            android:text="@string/lblResult"
            android:textStyle="bold"
            android:layout_above="@+id/lblOutput1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.05" />

        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblOutput"
            android:text="0.0"
            android:layout_weight="0.48"
            android:layout_above="@+id/linearLayout3"
            android:drawableTint="@color/abc_color_highlight_material" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnClose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblOutput1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Note:"
            android:layout_weight="0.32" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/lblRange1"
            android:textSize="16sp"
            android:text="lblDisplay Message"
          />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblRange2"
        android:textSize="12sp"
        android:text="@string/lblBottomInfor"
        android:layout_above="@+id/btnClose" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblRange2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="130dp"
        android:src="@drawable/colorbar" />

</RelativeLayout>
